# dynamic-mcp

./: Cargo.toml  README.md  pyproject.toml
.opencode/: oc.json  opencode.jsonc
src/: main.rs
src/config/: schema.rs
src/proxy/: client.rs  transport.rs
