[package]
name = "dynamic-mcp"
version = "1.5.0a"
edition = "2021"
rust-version = "1.75"
authors = ["Anssi Syrjäsalo"]
license = "MIT"
description = "MCP proxy server that reduces LLM context overhead with on-demand tool loading from multiple upstream servers."
readme = "README.md"
repository = "https://github.com/asyrjasalo/dynamic-mcp"
documentation = "https://docs.rs/dynamic-mcp"
keywords = ["mcp", "proxy", "server", "llm", "ai"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
exclude = [
    ".claude/",
    ".cursor/",
    ".opencode/",
    ".github/",
    "benches/",
    "docs/implementation/",
    '.gitignore',
    '.mcp.json',
    ".pre-commit-config.yaml",
    "AGENTS.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "config-schema.json",
    "dynamic-mcp.json",
    "mise.toml",
    "mise.lock",
    "pyproject.toml",
    "SECURITY.md"
]

[[bin]]
name = "dmcp"
path = "src/main.rs"

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[dependencies]
# MCP Protocol Types
rust-mcp-schema = "0.9"
rmcp = { version = "0.12", features = ["client", "transport-streamable-http-client-reqwest"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client for rmcp
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json_comments = "0.2"
toml = "0.8"

# Configuration validation
schemars = { version = "0.8", features = ["preserve_order"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
regex = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "6.1"

# OAuth2 Authentication
oauth2 = { version = "4.4", features = ["reqwest"] }
url = "2.5"
open = "5.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Process management
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
serial_test = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
