[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dmcp"
version = "1.5.0a"
description = "MCP proxy server that reduces LLM context overhead with on-demand tool loading from multiple upstream servers."
authors = [{ name = "Anssi Syrjäsalo" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mcp", "proxy", "server", "llm", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://crates.io/crates/dynamic-mcp"
Repository = "https://github.com/asyrjasalo/dynamic-mcp"
Documentation = "https://docs.rs/dynamic-mcp"

[tool.maturin]
bindings = "bin"
strip = true
